substrate/frame/support/test/tests/pallet_ui/trait_invalid_item.stderr
error: Invalid #[pallet::constant] in #[pallet::config], expected type item
  --> tests/pallet_ui/trait_invalid_item.rs:26:3
   |
26 |         const U: u8 = 3;
   |         ^^^^^
